mobile/client/src/app/appointment-page/appointment-page.component.scss
page-appointment {
  // Basic card styles
  // –––––––––––––––––––––

  .CheckOut-card {
    position: relative;
    margin-bottom: pxtovw(16px) 0;
    border-radius: pxtovw(8px);
    box-shadow:
      pxtovw(7px) 0 pxtovw(24px) 0 rgba(black, 0.08),
      0 pxtovw(7px) pxtovw(24px) 0 rgba(black, 0.08);
  }

  .CheckOut-buttons {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    margin-top: pxtovw(16px);
  }

  .CheckOut-button {
    width: 49%;
    padding: pxtovw(14px) 0;
    font-size: pxtovw(16px);
    color: color($colors, lightSalmon);
    text-align: center;
    border: pxtovw(1px) solid color($colors, lightSalmon);
    border-radius: pxtovw(10px);

    &.is-cancel {
      color: color($colors, warning);
      border-color: color($colors, warning);
    }
  }

  .CheckOut-card + .CheckOut-card {
    margin-top: pxtovw(16px);
    box-shadow:
      pxtovw(7px) 0 pxtovw(24px) 0 rgba(black, 0.08),
      0 pxtovw(7px) pxtovw(24px) 0 rgba(black, 0.08);
  }

  // Header card
  // –––––––––––––––––––––

  .Checkout-header {
    padding: pxtovw(16px);

    .UserName-ava {
      margin: 0 0 0 pxtovw(8px);
    }
  }

  .CheckOut-headerIcon,
  .CheckOut-headerDate {
    display: inline-block;
    vertical-align: middle;
  }

  .CheckOut-headerIcon {
    $icon-size: pxtovw(32px);

    position: relative;
    width: $icon-size;
    height: $icon-size;
    margin-right: pxtovw(8px);
    font-size: pxtovw(14px);
    color: #358ED7;
    background: rgba(black, 0.08);
    border-radius: 50%;

    i {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .mb-icon-check {
      margin-top: pxtovw(1px);
      margin-left: pxtovw(1px);
      font-size: pxtovw(26px);
      font-weight: 700;
    }

    &.is-alreadyCheckedOut {
      color: #FFFFFF;
      background: #68D09B;
      border: pxtovw(1px) solid transparent;
    }
  }

  .CheckOut-headerDate {
    font-size: pxtovw(13px);
    font-weight: 600;
    line-height: pxtovw(16px);
    color: color($colors, warmGrey);

    b {
      display: block;
      font-size: pxtovw(15px);
      font-weight: 600;
      line-height: pxtovw(16px);
      color: black;
    }
  }

  // Receipt card
  // –––––––––––––––––––––

  .CheckOut-price {
    position: relative;
    padding: pxtovw(16px);
    text-align: center;
  }

  .CheckOut-priceTitle {
    margin-bottom: pxtovw(8px);
    font-size: pxtovw(15px);
    line-height: pxtovw(16px);
    color: color($colors, warmGrey);
  }

  .CheckOut-priceValue {
    line-height: pxtovw(48px);
    letter-spacing: pxtovw(0.8px);
    transform: translateX(pxtovw(-8px));

    b,
    span {
      display: inline-block;
      vertical-align: top;
    }

    b {
      font-size: pxtovw(64px);
      line-height: pxtovw(48px);
    }

    span {
      font-size: pxtovw(20px);
      font-weight: 600;
      line-height: pxtovw(24px);
      transform: translateX(4px);
    }
  }

  .CheckOut-controlBtn {
    position: relative;
    padding: pxtovw(12px) 0;
    font-size: pxtovw(16px);
    font-weight: 500;
    line-height: pxtovw(24px);
    text-align: center;
    background: color($colors, primary);

    &:active {
      background: darken(color($colors, primary), 5%);
    }

    &:first-child {
      border-radius: 0 0 0 pxtovw(8px);
    }

    &:last-child {
      border-radius: 0 0 pxtovw(8px) 0;
    }

    &:after { // separators
      $width: pxtovw(1px);
      $height: pxtovw(16px);

      position: absolute;
      top: 50%;
      right: 0;
      width: $width;
      height: $height;
      margin: (-1 * $height / 2) ($width / 2) 0 0;
      content: '';
      background: black;
    }

    &:last-child:after {
      display: none;
    }
  }

  .CheckOut-details {
    padding: pxtovw(12px) pxtovw(16px);
    font-size: pxtovw(15px);
    line-height: pxtovw(16px);

    .mb-icon-trash {
      margin-left: pxtovw(8px);
      font-size: pxtovw(18px);
      color: color($colors, warmGrey);
    }

    .row {
      height: pxtovw(32px);
    }

    .col {
      text-align: right;

      &:first-child {
        text-align: left;
      }

      i,
      span {
        vertical-align: middle;
      }

      .text-muted {
        font-size: pxtovw(15px);
        line-height: pxtovw(16px);
      }
    }
  }

  .CheckOut-thumbs {
    margin: pxtovw(22px) 0 pxtovw(6px);
  }

  .CheckOut-userComment {
    margin: pxtovw(16px) 0 0;
  }

  .CheckOut-thumb {
    position: absolute;
    top: pxtovw(15px);
    right: pxtovw(15px);
    color: color($colors-shared, lightSalmon);

    i {
      font-size: pxtovw(24px);
    }
  }

  // Saved amount block
  // –––––––––––––––––––––

  .CheckOut-saved {
    $color-mint-bg: rgba(93, 202, 145, 0.05);

    padding: pxtovw(8px) pxtovw(12px);
    margin-top: pxtovw(16px);
    font-size: pxtovw(18px);
    font-weight: 500;
    line-height: pxtovw(24px);
    color: color($colors-shared, darkMint);
    background: $color-mint-bg;
    border: pxtovw(1px) solid color($colors-shared, darkMint);
    border-radius: pxtovw(8px);

    .CheckOut-savedAmount {
      font-size: pxtovw(28px);
      line-height: pxtovw(32px);
      text-align: right;

      sup {
        position: relative;
        top: pxtovw(-6px);
        font-size: pxtovw(24px);
      }
    }
  }

  // This page only
  // –––––––––––––––––––––
  .AppointmentPage-actions {
    margin: pxtovw(39px) auto;
    text-align: center;

    .AppointmentPage-checkout {
      display: block;
      width: 100%;
      margin-bottom: pxtovw(16px);
    }

    .AppointmentPage-cancelBooking {
      font-size: pxtovw(16px);
      color: color($colors, warning);
    }

    .AppointmentPage-reBook {
      font-size: pxtovw(16px);
      color: color($colors, orange);
      letter-spacing: pxtovw(0.4px);
    }
  }
}

